add option to include top level heading

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       <form id="options">
         <input type="checkbox" onchange="md2Toc()" name="markdown" value="true">Output markdown<br>
         <input type="checkbox" onchange="md2Toc()" name="bullets" value="true">Output bulleted list instead of numbered list<br>
-        <input type="checkbox" onchange="md2Toc()" name="zero" value="true">Allow for zero heading<br>
+        <input type="checkbox" onchange="md2Toc()" name="zero" value="true">Allow for zero-level heading<br>
+        <input type="checkbox" onchange="md2Toc()" name="toplevel" value="true">Include Heading 1 (Title)<br>
         <input type="checkbox" onchange="md2Toc()" name="noindent" value="true">Remove heading indentation<br>
         <input type="checkbox" onchange="md2Toc()" name="nolinks" value="true">Remove links to section headings<br>
 
