live update on change

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <tr>
           <td>
             <div id="input_div">
-              <textarea id="input" rows=15 cols=60 style="width:97%" accesskey="." title="Shift+Alt+.">Enter markdown here</textarea>
+              <textarea id="input" rows=15 cols=60 style="width:97%" accesskey="." onkeyup="md2Toc()">Enter markdown here</textarea>
             </div>
           </td>
           <td>
